--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,38 @@ body {
   font-family: "Open Sans", sans-serif !important;
 }
 
-.ChatUserList ::-webkit-scrollbar {
-  display: none !important;
+#ChatUserList::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+#ChatUserList::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+#ChatUserList::-webkit-scrollbar-button {
+  display: none;
+}
+
+#ChatUserList::-webkit-scrollbar-thumb {
+  background-color: #b6b6b6;
+  border-radius: 10px;
+}
+
+#MessBoxScroll::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+#MessBoxScroll::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+#MessBoxScroll::-webkit-scrollbar-button {
+  display: none;
+}
+
+#MessBoxScroll::-webkit-scrollbar-thumb {
+  background-color: #b6b6b6;
+  border-radius: 10px;
 }
